// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications: index component with application data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={
      Array [
        Object {
          "address": "e80b681c42f831ea3c4b8db531f5e165",
          "appName": "dAPP",
          "isLoading": true,
          "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
          "version": "1.0",
        },
      ]
    }
    fetchApplications={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-10"
          >
            <h3>
              Welcome to Launchpad
            </h3>
          </div>
          <div
            className="col-sm-2 text-right smd-pad-vertical-12"
          >
            <Blueprint.Tooltip
              content={
                <span>
                  Unable to deploy apps when running multinode on localhost
                </span>
              }
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              inline={true}
              isDisabled={true}
              openOnTargetFocus={true}
              position={10}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <Link
                replace={false}
                to="/launchpad"
              >
                <button
                  className="pt-button pt-intent-primary"
                  disabled={false}
                  type="button"
                >
                  Deploy
                </button>
              </Link>
            </Blueprint.Tooltip>
          </div>
        </div>,
        <div>
          <withRouter(Connect(ApplicationCard))
            app={
              Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              }
            }
          />
        </div>,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-10"
            >
              <h3>
                Welcome to Launchpad
              </h3>
            </div>,
            <div
              className="col-sm-2 text-right smd-pad-vertical-12"
            >
              <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>
            </div>,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Welcome to Launchpad
              </h3>,
              "className": "col-sm-10",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome to Launchpad",
              },
              "ref": null,
              "rendered": "Welcome to Launchpad",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>,
              "className": "col-sm-2 text-right smd-pad-vertical-12",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>,
                "content": <span>
                  Unable to deploy apps when running multinode on localhost
                </span>,
                "hoverCloseDelay": 0,
                "hoverOpenDelay": 100,
                "inline": true,
                "isDisabled": true,
                "openOnTargetFocus": true,
                "position": 10,
                "rootElementTag": "span",
                "transitionDuration": 100,
                "useSmartArrowPositioning": true,
                "useSmartPositioning": false,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>,
                  "replace": false,
                  "to": "/launchpad",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Deploy",
                    "className": "pt-button pt-intent-primary",
                    "disabled": false,
                    "type": "button",
                  },
                  "ref": null,
                  "rendered": "Deploy",
                  "type": "button",
                },
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "app": Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-10"
            >
              <h3>
                Welcome to Launchpad
              </h3>
            </div>
            <div
              className="col-sm-2 text-right smd-pad-vertical-12"
            >
              <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>
            </div>
          </div>,
          <div>
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />
          </div>,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-10"
              >
                <h3>
                  Welcome to Launchpad
                </h3>
              </div>,
              <div
                className="col-sm-2 text-right smd-pad-vertical-12"
              >
                <Blueprint.Tooltip
                  content={
                    <span>
                      Unable to deploy apps when running multinode on localhost
                    </span>
                  }
                  hoverCloseDelay={0}
                  hoverOpenDelay={100}
                  inline={true}
                  isDisabled={true}
                  openOnTargetFocus={true}
                  position={10}
                  rootElementTag="span"
                  transitionDuration={100}
                  useSmartArrowPositioning={true}
                  useSmartPositioning={false}
                >
                  <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>
                </Blueprint.Tooltip>
              </div>,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Welcome to Launchpad
                </h3>,
                "className": "col-sm-10",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Welcome to Launchpad",
                },
                "ref": null,
                "rendered": "Welcome to Launchpad",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Blueprint.Tooltip
                  content={
                    <span>
                      Unable to deploy apps when running multinode on localhost
                    </span>
                  }
                  hoverCloseDelay={0}
                  hoverOpenDelay={100}
                  inline={true}
                  isDisabled={true}
                  openOnTargetFocus={true}
                  position={10}
                  rootElementTag="span"
                  transitionDuration={100}
                  useSmartArrowPositioning={true}
                  useSmartPositioning={false}
                >
                  <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>
                </Blueprint.Tooltip>,
                "className": "col-sm-2 text-right smd-pad-vertical-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>,
                  "content": <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>,
                  "hoverCloseDelay": 0,
                  "hoverOpenDelay": 100,
                  "inline": true,
                  "isDisabled": true,
                  "openOnTargetFocus": true,
                  "position": 10,
                  "rootElementTag": "span",
                  "transitionDuration": 100,
                  "useSmartArrowPositioning": true,
                  "useSmartPositioning": false,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>,
                    "replace": false,
                    "to": "/launchpad",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Deploy",
                      "className": "pt-button pt-intent-primary",
                      "disabled": false,
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "Deploy",
                    "type": "button",
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ApplicationCard))
                app={
                  Object {
                    "address": "e80b681c42f831ea3c4b8db531f5e165",
                    "appName": "dAPP",
                    "isLoading": true,
                    "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                    "version": "1.0",
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "function",
              "props": Object {
                "app": Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Applications: index component with initial values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={Array []}
    fetchApplications={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-10"
          >
            <h3>
              Welcome to Launchpad
            </h3>
          </div>
          <div
            className="col-sm-2 text-right smd-pad-vertical-12"
          >
            <Blueprint.Tooltip
              content={
                <span>
                  Unable to deploy apps when running multinode on localhost
                </span>
              }
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              inline={true}
              isDisabled={true}
              openOnTargetFocus={true}
              position={10}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <Link
                replace={false}
                to="/launchpad"
              >
                <button
                  className="pt-button pt-intent-primary"
                  disabled={false}
                  type="button"
                >
                  Deploy
                </button>
              </Link>
            </Blueprint.Tooltip>
          </div>
        </div>,
        <div>
          <div
            className="row"
            style={
              Object {
                "paddingBottom": "40px",
              }
            }
          >
            <div
              className="col-sm-12 text-center"
            >
              Deploy an application to get started
            </div>
          </div>
        </div>,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-10"
            >
              <h3>
                Welcome to Launchpad
              </h3>
            </div>,
            <div
              className="col-sm-2 text-right smd-pad-vertical-12"
            >
              <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>
            </div>,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Welcome to Launchpad
              </h3>,
              "className": "col-sm-10",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome to Launchpad",
              },
              "ref": null,
              "rendered": "Welcome to Launchpad",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>,
              "className": "col-sm-2 text-right smd-pad-vertical-12",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>,
                "content": <span>
                  Unable to deploy apps when running multinode on localhost
                </span>,
                "hoverCloseDelay": 0,
                "hoverOpenDelay": 100,
                "inline": true,
                "isDisabled": true,
                "openOnTargetFocus": true,
                "position": 10,
                "rootElementTag": "span",
                "transitionDuration": 100,
                "useSmartArrowPositioning": true,
                "useSmartPositioning": false,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>,
                  "replace": false,
                  "to": "/launchpad",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Deploy",
                    "className": "pt-button pt-intent-primary",
                    "disabled": false,
                    "type": "button",
                  },
                  "ref": null,
                  "rendered": "Deploy",
                  "type": "button",
                },
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row"
            style={
              Object {
                "paddingBottom": "40px",
              }
            }
          >
            <div
              className="col-sm-12 text-center"
            >
              Deploy an application to get started
            </div>
          </div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12 text-center"
            >
              Deploy an application to get started
            </div>,
            "className": "row",
            "style": Object {
              "paddingBottom": "40px",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Deploy an application to get started",
              "className": "col-sm-12 text-center",
            },
            "ref": null,
            "rendered": "Deploy an application to get started",
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-10"
            >
              <h3>
                Welcome to Launchpad
              </h3>
            </div>
            <div
              className="col-sm-2 text-right smd-pad-vertical-12"
            >
              <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>
            </div>
          </div>,
          <div>
            <div
              className="row"
              style={
                Object {
                  "paddingBottom": "40px",
                }
              }
            >
              <div
                className="col-sm-12 text-center"
              >
                Deploy an application to get started
              </div>
            </div>
          </div>,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-10"
              >
                <h3>
                  Welcome to Launchpad
                </h3>
              </div>,
              <div
                className="col-sm-2 text-right smd-pad-vertical-12"
              >
                <Blueprint.Tooltip
                  content={
                    <span>
                      Unable to deploy apps when running multinode on localhost
                    </span>
                  }
                  hoverCloseDelay={0}
                  hoverOpenDelay={100}
                  inline={true}
                  isDisabled={true}
                  openOnTargetFocus={true}
                  position={10}
                  rootElementTag="span"
                  transitionDuration={100}
                  useSmartArrowPositioning={true}
                  useSmartPositioning={false}
                >
                  <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>
                </Blueprint.Tooltip>
              </div>,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Welcome to Launchpad
                </h3>,
                "className": "col-sm-10",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Welcome to Launchpad",
                },
                "ref": null,
                "rendered": "Welcome to Launchpad",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Blueprint.Tooltip
                  content={
                    <span>
                      Unable to deploy apps when running multinode on localhost
                    </span>
                  }
                  hoverCloseDelay={0}
                  hoverOpenDelay={100}
                  inline={true}
                  isDisabled={true}
                  openOnTargetFocus={true}
                  position={10}
                  rootElementTag="span"
                  transitionDuration={100}
                  useSmartArrowPositioning={true}
                  useSmartPositioning={false}
                >
                  <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>
                </Blueprint.Tooltip>,
                "className": "col-sm-2 text-right smd-pad-vertical-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>,
                  "content": <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>,
                  "hoverCloseDelay": 0,
                  "hoverOpenDelay": 100,
                  "inline": true,
                  "isDisabled": true,
                  "openOnTargetFocus": true,
                  "position": 10,
                  "rootElementTag": "span",
                  "transitionDuration": 100,
                  "useSmartArrowPositioning": true,
                  "useSmartPositioning": false,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>,
                    "replace": false,
                    "to": "/launchpad",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Deploy",
                      "className": "pt-button pt-intent-primary",
                      "disabled": false,
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "Deploy",
                    "type": "button",
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row"
              style={
                Object {
                  "paddingBottom": "40px",
                }
              }
            >
              <div
                className="col-sm-12 text-center"
              >
                Deploy an application to get started
              </div>
            </div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="col-sm-12 text-center"
              >
                Deploy an application to get started
              </div>,
              "className": "row",
              "style": Object {
                "paddingBottom": "40px",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Deploy an application to get started",
                "className": "col-sm-12 text-center",
              },
              "ref": null,
              "rendered": "Deploy an application to get started",
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Applications: index componentWillUnmount 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={
      Array [
        Object {
          "address": "e80b681c42f831ea3c4b8db531f5e165",
          "appName": "dAPP",
          "isLoading": true,
          "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
          "version": "1.0",
        },
      ]
    }
    fetchApplications={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-10"
          >
            <h3>
              Welcome to Launchpad
            </h3>
          </div>
          <div
            className="col-sm-2 text-right smd-pad-vertical-12"
          >
            <Blueprint.Tooltip
              content={
                <span>
                  Unable to deploy apps when running multinode on localhost
                </span>
              }
              hoverCloseDelay={0}
              hoverOpenDelay={100}
              inline={true}
              isDisabled={true}
              openOnTargetFocus={true}
              position={10}
              rootElementTag="span"
              transitionDuration={100}
              useSmartArrowPositioning={true}
              useSmartPositioning={false}
            >
              <Link
                replace={false}
                to="/launchpad"
              >
                <button
                  className="pt-button pt-intent-primary"
                  disabled={false}
                  type="button"
                >
                  Deploy
                </button>
              </Link>
            </Blueprint.Tooltip>
          </div>
        </div>,
        <div>
          <withRouter(Connect(ApplicationCard))
            app={
              Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              }
            }
          />
        </div>,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-10"
            >
              <h3>
                Welcome to Launchpad
              </h3>
            </div>,
            <div
              className="col-sm-2 text-right smd-pad-vertical-12"
            >
              <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>
            </div>,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Welcome to Launchpad
              </h3>,
              "className": "col-sm-10",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome to Launchpad",
              },
              "ref": null,
              "rendered": "Welcome to Launchpad",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>,
              "className": "col-sm-2 text-right smd-pad-vertical-12",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>,
                "content": <span>
                  Unable to deploy apps when running multinode on localhost
                </span>,
                "hoverCloseDelay": 0,
                "hoverOpenDelay": 100,
                "inline": true,
                "isDisabled": true,
                "openOnTargetFocus": true,
                "position": 10,
                "rootElementTag": "span",
                "transitionDuration": 100,
                "useSmartArrowPositioning": true,
                "useSmartPositioning": false,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>,
                  "replace": false,
                  "to": "/launchpad",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Deploy",
                    "className": "pt-button pt-intent-primary",
                    "disabled": false,
                    "type": "button",
                  },
                  "ref": null,
                  "rendered": "Deploy",
                  "type": "button",
                },
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "app": Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-10"
            >
              <h3>
                Welcome to Launchpad
              </h3>
            </div>
            <div
              className="col-sm-2 text-right smd-pad-vertical-12"
            >
              <Blueprint.Tooltip
                content={
                  <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>
                }
                hoverCloseDelay={0}
                hoverOpenDelay={100}
                inline={true}
                isDisabled={true}
                openOnTargetFocus={true}
                position={10}
                rootElementTag="span"
                transitionDuration={100}
                useSmartArrowPositioning={true}
                useSmartPositioning={false}
              >
                <Link
                  replace={false}
                  to="/launchpad"
                >
                  <button
                    className="pt-button pt-intent-primary"
                    disabled={false}
                    type="button"
                  >
                    Deploy
                  </button>
                </Link>
              </Blueprint.Tooltip>
            </div>
          </div>,
          <div>
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />
          </div>,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-10"
              >
                <h3>
                  Welcome to Launchpad
                </h3>
              </div>,
              <div
                className="col-sm-2 text-right smd-pad-vertical-12"
              >
                <Blueprint.Tooltip
                  content={
                    <span>
                      Unable to deploy apps when running multinode on localhost
                    </span>
                  }
                  hoverCloseDelay={0}
                  hoverOpenDelay={100}
                  inline={true}
                  isDisabled={true}
                  openOnTargetFocus={true}
                  position={10}
                  rootElementTag="span"
                  transitionDuration={100}
                  useSmartArrowPositioning={true}
                  useSmartPositioning={false}
                >
                  <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>
                </Blueprint.Tooltip>
              </div>,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Welcome to Launchpad
                </h3>,
                "className": "col-sm-10",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Welcome to Launchpad",
                },
                "ref": null,
                "rendered": "Welcome to Launchpad",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Blueprint.Tooltip
                  content={
                    <span>
                      Unable to deploy apps when running multinode on localhost
                    </span>
                  }
                  hoverCloseDelay={0}
                  hoverOpenDelay={100}
                  inline={true}
                  isDisabled={true}
                  openOnTargetFocus={true}
                  position={10}
                  rootElementTag="span"
                  transitionDuration={100}
                  useSmartArrowPositioning={true}
                  useSmartPositioning={false}
                >
                  <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>
                </Blueprint.Tooltip>,
                "className": "col-sm-2 text-right smd-pad-vertical-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/launchpad"
                  >
                    <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>
                  </Link>,
                  "content": <span>
                    Unable to deploy apps when running multinode on localhost
                  </span>,
                  "hoverCloseDelay": 0,
                  "hoverOpenDelay": 100,
                  "inline": true,
                  "isDisabled": true,
                  "openOnTargetFocus": true,
                  "position": 10,
                  "rootElementTag": "span",
                  "transitionDuration": 100,
                  "useSmartArrowPositioning": true,
                  "useSmartPositioning": false,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <button
                      className="pt-button pt-intent-primary"
                      disabled={false}
                      type="button"
                    >
                      Deploy
                    </button>,
                    "replace": false,
                    "to": "/launchpad",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Deploy",
                      "className": "pt-button pt-intent-primary",
                      "disabled": false,
                      "type": "button",
                    },
                    "ref": null,
                    "rendered": "Deploy",
                    "type": "button",
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ApplicationCard))
                app={
                  Object {
                    "address": "e80b681c42f831ea3c4b8db531f5e165",
                    "appName": "dAPP",
                    "isLoading": true,
                    "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                    "version": "1.0",
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "function",
              "props": Object {
                "app": Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Applications: index mapStateToProps with default state 1`] = `
Object {
  "applications": Array [],
}
`;
